ChangeLog file for Endian libencloud

next:
	- [FIX] CONNECT-235 DNS configuration not removed upon disconnect on OSX Yosemite
	- [FIX] CONNECT-241 OSX: Routing rule for Direct All traffic through the VPN is not created
	- [FIX] CONNECT-253 "Undefined fields in profile" displayed erroneously
	- [FIX] CONNECT-290 Routing on OSX fails if /32 networks are pushed
	- [FIX] CONNECT-297 [DEVICE-ONLY] Avoid file descriptor leak upon failure if autoretry is set
	- [FIX] CONNECT-299 Connection may timeout on OSX if many routes are pushed
	- [FIX] CONNECT-310 Incremental build does not update version in User-Agent
	- [FIX] CONNECT-313 Unable to connect to the Switchboard if HTTP Proxy is configured
	- [FIX] CONNECT-314 [DEVICE-ONLY] Stopping service hangs until timeout
	- [FIX] CONNECT-315 In Switchboard mode Mac OSX client doesn't receive the routing rules in case of real IPs
	- [TASK] CONNECT-316 Panda VPN Client branding
	- [IMPROVEMENT] CONNECT-219 Avoid file dump when Connection Profiles are unchanged
	- [IMPROVEMENT] CONNECT-248 Add Endian prefix to product name in shortcuts
	- [FEATURE] CONNECT-257 One-Time Password support
	- [FEATURE] CONNECT-260 Profile Import Tool (legacy VPN Client and App < 3.6.0)
	- [FEATURE] CONNECT-268 Cookie-based authentication support

libencloud 0.8.0 (26/06/2015)
	- vpn: headers are now public; improved internal representation; added helper functions and 
	  basic error checking
	- modeqcc now also supports plain vpn (based on config: setup.enabled)
	- CONFIG += splitdeps for case when package is not self-contained (e.g. Yocto)
	- sece: make sure valid=false is always caught as CodeServerLicenseInvalid
	- *ece: fix typo which caused congestion avoidance to be applied also to QCC
	- crypto: new requestFromAuth to set QNetworkRequest from libencloud::Auth
	- api: id and type are really optional and have proper defaults
	- config: autoretry and decongest can be modified via API (default false for QCC and true for *ECE);