@@ -107,10 +107,6 @@
                      "openvpn_internal_ip" : "192.168.150.1",
                      "fallback_openvpn_internal_ip" : "192.168.151.1"
                      "available_pages" : { "settings" : "/manage/access/settings/standalone/",      # [...]
-                 },
-                 "client" : {
-                    "already_connected" : false,
-                 }
              }'
 
 
